--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "date-fns": "^2.11.1",
     "next": "^10.0.0",
     "react": "16.13.1",
