--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.0",
     "date-fns": "^2.11.1",
+    "lodash": "^4.17.20",
     "next": "^10.0.0",
+    "pdf2json": "^1.2.0",
+    "pdfjs-dist": "^2.5.207",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
+    "@types/pdfjs-dist": "^2.1.6",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
