--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.0",
     "date-fns": "^2.11.1",
+    "idb": "^5.0.8",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
     "pdf2json": "^1.2.0",
