--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "idb": "^5.0.8",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
+    "next-pwa": "^5.2.21",
     "pdf2json": "^1.2.0",
     "pdfjs-dist": "^2.5.207",
     "react": "16.13.1",
