--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -3,7 +3,12 @@
   "short_name": "Govorilka",
   "icons": [
     {
-      "src": "/static/icons/pwa-icon-512x512.png",
+      "src": "/static/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
