--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "bootstrap": "npm i && localazy download",
     "build": "next build",
     "start": "next start",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
@@ -18,6 +19,7 @@
     "idb": "^5.0.8",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
+    "next-i18next": "^8.3.0",
     "next-pwa": "^5.2.21",
     "pdf2json": "^1.2.0",
     "pdfjs-dist": "^2.5.207",
