--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_TTS_API_KEY=abcdefghijk
+NEXT_PUBLIC_API_HOSTNAME=http://localhost:3000
+GOOGLE_APPLICATION_CREDENTIALS=service-account.json
