build: Vercel deploy preparation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_TTS_API_KEY=abcdefghijk
 NEXT_PUBLIC_API_HOSTNAME=http://localhost:3000
-GOOGLE_APPLICATION_CREDENTIALS=service-account.json
+FIREBASE_CLIENT_EMAIL=your_firebase_client_email
+FIREBASE_PRIVATE_KEY=your_firebase_private_key
